--- a/style.css/container.css
+++ b/style.css/container.css
@@ -7,6 +7,5 @@
 }
 
 .container__calculator {
-    background-color: rgb(86, 122, 230);
-    background-image: linear-gradient(168deg, rgba(89, 131, 252, 1) 11%, rgba(0, 0, 0, 1) 76%);
-}
+    background-color: rgba(79, 77, 189, 1);
+    background-image: linear-gradient(153deg, rgba(79, 77, 189, 1) 0%, rgba(41, 53, 86, 1) 38%);}
