--- a/style.css/screan.css
+++ b/style.css/screan.css
@@ -1,8 +1,19 @@
 .screan {
     min-height: 100px;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    justify-content: end;
+    margin: 5px;
+    color: rgba(255, 255, 255, 0.671);
+}
+
+.screan__char {
     display: flex;
     justify-content: flex-end;
-    align-items: flex-end;
-    margin: 5px;
+    margin: 0;
+}
+
+.screan__char--result {
+    font-size: larger;
     color: white;
 }
