--- a/style.css/container.css
+++ b/style.css/container.css
@@ -1,11 +1,14 @@
 .container {
-    background-color: hsl(220.85deg 5.52% 80.16% / 37%);
+    background-color: rgba(79, 77, 189, 1);
+    background-image: radial-gradient(circle, rgba(89, 131, 252, 1) 0%, rgba(41, 53, 86, 1) 100%);
     font-family: 'Lato', sans-serif;
     line-height: 1.5;
-    margin: auto auto;
+    margin: 100px auto;
     max-width: 400px;
 }
 
 .container__calculator {
     background-color: rgba(79, 77, 189, 1);
-    background-image: linear-gradient(153deg, rgba(79, 77, 189, 1) 0%, rgba(41, 53, 86, 1) 38%);}
+    background-image: linear-gradient(153deg, rgba(79, 77, 189, 1) 0%, rgba(41, 53, 86, 1) 38%);
+    box-shadow: 0px 0px 20px 3px hsl(228, 46%, 33%);
+}
