--- a/style.css/panel.css
+++ b/style.css/panel.css
@@ -22,6 +22,27 @@
     transition: 0.3s;
     cursor: pointer;
 }
+
+.panel__memoryOperation::after {
+    content: "Chwilowo nieaktywne";
+    font-size: 10px;
+    position: absolute;
+    top: calc(100% + 0px);
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: hsla(0, 0%, 0%, 0.8);
+    color: hsl(0, 0%, 100%);
+    padding: 5px;
+    border-radius: 5px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    pointer-events: none;
+}
+
+.panel__memoryOperation:active::after {
+    opacity: 1;
+}
+
 .panel__memoryOperation:hover {
     transform: scale(1.04);
 }
@@ -60,7 +81,7 @@
     background-color: hsl(240, 5%, 30%);
 }
 
-.panel__classicOperation--equal{
+.panel__classicOperation--equal {
     background-color: hsl(206, 72%, 63%);
     color: black;
     font-size: larger;
